[project]
name = "litellm_utils"
version = "1.1.0"
description = "Lightweight Python wrapper for LiteLLM with simplified interface for 100+ AI providers. Supports text, images, and documents with conversation management."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Viktor Sharha"}
]
keywords = ["litellm", "ai", "openai", "anthropic", "claude", "gemini", "llm", "api", "wrapper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.80.5",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.61.1",
    "easyocr>=1.7.2",
]
all = [
    "docling>=2.61.1",
    "easyocr>=1.7.2",
]

[project.urls]
Homepage = "https://github.com/vsharha/litellm_utils"
Repository = "https://github.com/vsharha/litellm_utils"
Issues = "https://github.com/vsharha/litellm_utils/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["litellm_utils"]
